--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Hello, my name is Jeanine White"
+					title="Hello, my name is Kevin Sommer"
 					tagline="I am a Creative Developer who is currently based in Portland, Oregon."
 					align="start"
 				>
@@ -42,7 +42,7 @@ const projects = (await getCollection('work'))
 				</Hero>
 
 				<img
-					alt="Jeanine White smiling in a red plaid shirt and tortoise shell glasses"
+					alt="Kevin Sommer"
 					width="480"
 					height="620"
 					src="/assets/portrait.jpg"
