updated about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -24,35 +24,56 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
+						RWTH Aachen graduate who studied Computer Science with a focus on data science and machine learning. Dedicated to software engineering,
+						having several years of expertise, and specialising in Frontend web development. Searching mostly for Frontend Developer, Full Stack Developer
+						and Machine Learning positions.
 					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
-					</p>
+					
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p><b>B.Sc. Computer Science</b> 2017-2020</p>
+					<br>
+					<p>RWTH Aachen University</p>
+					<br/>
+					<p><b>M.Sc. Computer Science</b> 2020-2022</p>
+					<br>
+					<p>RWTH Aachen University</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<p>
+						<h5>Programming Languages</h5>
+						<ul>
+							<li>JavaScript/TypeScript (React, Next.js. etc.)</li>
+							<li>Python (Pandas, PyTorch, NumPy, Scikit‑learn, FastApi. etc.)</li>
+							<li>HTML/CSS</li>
+							<li>C++ (NS‑3)</li>
+							<li>SQL (PostgreSQL, SQLite)</li>
+						</ul>
+						
+						<h5>Misc</h5>
+						<ul>
+							<li>Linux</li>
+							<li>Shell (Bash/Zsh)</li>
+							<li>Git</li>
+							<li>LaTeX (Overleaf)</li>
+							<li>NGINX</li>
+						</ul>
+
+						<h5>Soft Skills</h5>
+						<ul>
+							<li>Communication</li>
+							<li>Time Management</li>
+							<li>Teamwork</li>
+							<li>Problem‑Solving</li>
+							<li>Documentation</li>
+						</ul>
+					</p>
 				</div>
 			</section>
 		</main>
