updated skills page

--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,18 +5,18 @@ import Icon from './Icon.astro';
 <section class="box skills">
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Full Stack</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+		<h2>Frontend Developer</h2>
+		<p>Several years of experience working with React and other frontend frameworks at work and on personal projects.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
-		<Icon icon="trophy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Industry Leader</h2>
-		<p>Neque viverra justo nec ultrices dui. Est ultricies integer quis auctor elit.</p>
+		<Icon icon="machine-learning" color="var(--accent-regular)" size="2.5rem" gradient />
+		<h2>Machine Learning</h2>
+		<p>Significant background in machine learning because of half a dozen university courses.</p>
 	</div>
 	<div class="stack gap-2 lg:gap-4">
 		<Icon icon="strategy" color="var(--accent-regular)" size="2.5rem" gradient />
-		<h2>Strategy-Minded</h2>
-		<p>Urna porttitor rhoncus dolor purus non enim praesent ornare.</p>
+		<h2>Tech-Enthusiast</h2>
+		<p>Passionate about tech and excited about trying new frameworks, libraries and languages.</p>
 	</div>
 </section>
 
