updated about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -35,12 +35,23 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Education</h2>
 				<div class="content">
 					<p><b>B.Sc. Computer Science</b> 2017-2020</p>
-					<br>
 					<p>RWTH Aachen University</p>
+					<p>
+						<ul>
+							<li><b>Courses:</b> Basic Techniques in Computer Graphics, Introduction to Web Technologies, Functional Programming, Numerical Mathematics</li>
+							<li><b>Thesis:</b> An Intelligent Tool for the Collection of Training Data for Art Curation</li>
+						</ul>
+					</p>
+
 					<br/>
 					<p><b>M.Sc. Computer Science</b> 2020-2022</p>
-					<br>
 					<p>RWTH Aachen University</p>
+					<p>
+						<ul>
+							<li><b>Courses:</b> Introduction to Data Science, Machine Learning, Text Mining, Web Mining, Social Data Science, Advanced Internet Technology, Communication Systems Engineering</li>
+							<li><b>Thesis:</b> Investigating Machine Learning Techniques for Network Error Classification using Explicit Measurement Bit</li>
+						</ul>
+					</p>
 				</div>
 			</section>
 			<section>
