updates about page picture

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,9 +17,9 @@ import Pill from "../components/Pill.astro";
 				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
 			>
 				<img
-					width="1553"
-					height="873"
-					src="/assets/at-work.jpg"
+					style="margin: 0 auto; display: block;"
+					width="600"
+					src="/assets/about_hero.png"
 					alt="Kevin Sommer at work with a colleague"
 				/>
 			</Hero>
