--- a/src/components/Pill.astro
+++ b/src/components/Pill.astro
@@ -5,11 +5,10 @@
 		display: flex;
 		padding: 0.5rem 1rem;
 		gap: 0.5rem;
-		color: var(--accent-text-over);
-		border: 1px solid var(--accent-regular);
-		background-color: var(--accent-regular);
+		color: var(--link-color);
+		border: 1px solid var(--link-color);
 		border-radius: 999rem;
-		font-size: var(--text-md);
+		font-size: var(--text-sm);
 		line-height: 1.35;
 		white-space: nowrap;
 	}
