--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const projects = (await getCollection('work'))
       <header class="hero">
         <Hero
           title="Hello, my name is Kevin Sommer"
-          tagline="I am a Developer who is currently based in Aachen, Germany."
+          tagline="I am a Developer who is currently based in Düsseldorf, Germany."
           align="start">
           <div class="roles">
             <Pill><Icon icon="code" size="1.33em" /> Developer</Pill>
