--- a/src/components/Skills.astro
+++ b/src/components/Skills.astro
@@ -5,7 +5,7 @@ import Icon from './Icon.astro';
 <section class="box skills">
   <div class="stack gap-2 lg:gap-4">
     <Icon icon="terminal-window" color="var(--accent-regular)" size="2.5rem" gradient />
-    <h2>Frontend Developer</h2>
+    <h2>Full Stack Developer</h2>
     <p>Several years of experience working with React and other frontend frameworks at work and on personal projects.</p>
   </div>
   <div class="stack gap-2 lg:gap-4">
